2016-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-group-table): Fix fuchiso url.
	(shimbun-mainichi-get-headers-fuchisou): New function.
	(shimbun-get-headers): Use it.
	(shimbun-mainichi-get-headers): Fix regexp.
	(shimbun-mainichi-clear-contents): Don't conceal error page.

	Note: These changes don't let we get to subscribe to fuchiso (yet).
	It requires shimbun.el to work for <body onload="..."> automatically.
	In addition, a user has to have an account on mainichi.jp of course.

2016-09-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnshimbun.el (nnshimbun-decode-group-name)
	(gnus-group-make-shimbun-group): Use Emacs functions rather than
	mm-coding-system-p, mm-decode-coding-string, or mm-encode-coding-string.

2016-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnshimbun.el: Add an advice to gnus-backlog-shutdown.
	(nnshimbun-close-server): Use unadvised gnus-backlog-shutdown.

2016-08-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	Don't use `string-as-unibyte' that is obsolete in Emacs 25.2.
	Use `string-make-unibyte' instead.

	* mew-shimbun.el (mew-shimbun-md5):
	* nnshimbun.el (gnus-group-make-shimbun-group): Do.

2016-07-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-clear-contents):
	Improve the way to find the article end.

2016-03-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el (shimbun-nikkangendai-get-headers-top): Work.

2016-03-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el (shimbun-multi-clear-contents): Fix regexp.

2016-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-clear-contents): Make it work.

2016-03-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-clear-contents): Remove garbage.

2015-12-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-clear-contents):
	Emergency fix to regexp to search article body.

2015-12-07  Katsumi Yamaoka  <yamaoka@jpl.org>
