@@ -1,3 +1,8 @@
+2016-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-yoshirin.el (shimbun-yoshirin-make-contents):
+	Decode thumnail's caption if necessary.
+
 2016-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* sb-mainichi.el (shimbun-mainichi-group-table): Fix fuchiso url.
